--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js ",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js"
+    "dev": "eslint --fix --ext .js,.jsx src && cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js ",
+    "build": "eslint --fix --ext .js,.jsx src && cross-env NODE_ENV=production webpack --config build/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,20 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/runtime": "^7.10.2",
     "autoprefixer": "^9.8.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.0",
     "postcss-loader": "^3.0.0",
@@ -56,6 +66,8 @@
     "@babel/runtime-corejs3": "^7.10.2",
     "core-js": "^3.6.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
