--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-webpack-demo",
   "version": "1.0.0",
   "description": "react webpack koa react-demo",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --color --progress --config build/webpack.dev.js ",
     "dev": "eslint --fix --ext .js,.jsx src && cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js ",
     "build": "eslint --fix --ext .js,.jsx src && cross-env NODE_ENV=production webpack --config build/webpack.prod.js"
   },
@@ -31,9 +31,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
@@ -64,10 +66,14 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.10.2",
+    "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   }
 }
